tests/output/half_expression_compiled.expected

Error: Unexpected token 'If'.
 --> tests/half_expression.bonk:9:18
  | 
9 |     let b = [o]a if true then 1 else 1
  |                  ^^

